// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stepper /> Snapshots should match snapshot with first step active 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 0,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#F5F5FA",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
          ]
        }
      />
      <View
        secondary={false}
        style={
          [
            {
              "backgroundColor": "#D8385E",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "0%",
            },
          ]
        }
        width={0}
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={true}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#D8385E",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={true}
          secondary={false}
          style={
            [
              {
                "color": "#D8385E",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step one
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={false}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#F5F5FA",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={false}
          secondary={false}
          style={
            [
              {
                "color": "#9898A6",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step two
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={false}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#F5F5FA",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={false}
          secondary={false}
          style={
            [
              {
                "color": "#9898A6",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step three
        </Text>
      </View>
    </View>
  </View>
  <View
    label="step one"
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  >
    <Text>
      step one content
    </Text>
  </View>
</View>
`;

exports[`<Stepper /> Snapshots should match snapshot with first step active and secondary color 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 0,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#F5F5FA",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
          ]
        }
      />
      <View
        secondary={true}
        style={
          [
            {
              "backgroundColor": "#231B22",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "0%",
            },
          ]
        }
        width={0}
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={true}
          secondary={true}
          style={
            [
              {
                "backgroundColor": "#231B22",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={true}
          secondary={true}
          style={
            [
              {
                "color": "#231B22",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step one
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={false}
          secondary={true}
          style={
            [
              {
                "backgroundColor": "#F5F5FA",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={false}
          secondary={true}
          style={
            [
              {
                "color": "#9898A6",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step two
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={false}
          secondary={true}
          style={
            [
              {
                "backgroundColor": "#F5F5FA",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={false}
          secondary={true}
          style={
            [
              {
                "color": "#9898A6",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step three
        </Text>
      </View>
    </View>
  </View>
  <View
    label="step one"
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  >
    <Text>
      step one content
    </Text>
  </View>
</View>
`;

exports[`<Stepper /> Snapshots should match snapshot with second step active 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "paddingBottom": 0,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "position": "relative",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#F5F5FA",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            },
          ]
        }
      />
      <View
        secondary={false}
        style={
          [
            {
              "backgroundColor": "#D8385E",
              "height": 4,
              "position": "absolute",
              "top": 0,
              "width": "50%",
            },
          ]
        }
        width={50}
      />
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={true}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#D8385E",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={true}
          secondary={false}
          style={
            [
              {
                "color": "#D8385E",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step one
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={true}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#D8385E",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={true}
          secondary={false}
          style={
            [
              {
                "color": "#D8385E",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step two
        </Text>
      </View>
      <View
        style={
          [
            {
              "width": 15,
            },
          ]
        }
      >
        <View
          active={false}
          secondary={false}
          style={
            [
              {
                "backgroundColor": "#F5F5FA",
                "borderRadius": 9999,
                "height": 15,
                "marginTop": -6,
                "width": 15,
              },
            ]
          }
        />
        <Text
          active={false}
          secondary={false}
          style={
            [
              {
                "color": "#9898A6",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "500",
                "lineHeight": 16,
                "marginLeft": -40,
                "marginTop": 10,
                "textAlign": "center",
                "width": 95,
              },
            ]
          }
        >
          step three
        </Text>
      </View>
    </View>
  </View>
  <View
    label="step two"
    style={
      [
        {
          "width": "100%",
        },
      ]
    }
  >
    <Text>
      step two content
    </Text>
  </View>
</View>
`;
